--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,3 @@
-/* google fonts
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
-
 /* ============ Universal & Element Styling ================== */
 
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
@@ -13,8 +10,6 @@
 body {
   font-family: "Roboto", sans-serif;
 }
-section {
-}
 footer {
   background-color: #0c0e3f;
   color: white;
@@ -26,7 +21,6 @@ h2,
 h3,
 h4 {
   font-family: "Playfair Display", serif;
-  margin: 0;
   text-transform: capitalize;
 }
 h1 {
@@ -37,11 +31,17 @@ h2 {
 }
 
 p {
-  margin: 0;
   font-weight: 100;
 }
 
-/* ============ Header Styling ================== */
+/* ============ Header Section ================== */
+.logo {
+  color: #eb59a7;
+  font-family: playfair disney;
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding-left: 1vw;
+}
 nav {
   display: flex;
   justify-content: space-between;
@@ -57,9 +57,6 @@ ul {
   font-size: 30px;
   justify-content: space-around;
 }
-ul.show {
-  display: block;
-}
 nav ul li a {
   color: white;
   font-size: 0.75rem;
@@ -72,13 +69,10 @@ li {
   font-size: 0.75rem;
   text-transform: uppercase;
 }
+/* ============ Hero Section ================== */
 
-
-/* ============ Hero Styling ================== */
 .hero {
   height: 100vh;
-  color: rgb(0, 0, 0);
-  font-size: 40px;
 }
 .hero-container {
   display: flex;
@@ -89,16 +83,19 @@ li {
   color: #fff;
 }
 .hero-avatar {
-  margin: 50px;
+  margin: 10px;
   height: 200px;
   width: 200px;
   border-radius: 50%;
   box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.3);
 }
 .hero-text {
-  margin-left: 40px;
+  margin-left: 50px;
   letter-spacing: 1px;
   margin-bottom: 200px;
+}
+.accent {
+  color: #eb59a7;
 }
 .hero p {
   font-weight: 500;
@@ -133,126 +130,112 @@ li {
   width: 30px;
   height: 30px;
 }
-/* ============ About Styling ================== */
 
+/* ============ About Section ================== */
+.sub-heading {
+  font-size: 3rem;
+}
+.sub-section {
+  display: flex;
+  justify-content: space-around;
+  padding: 100px;
+}
+.sub-section-alt {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 100px;
+}
+.section-intro {
+  margin: 20px 0;
+}
+.about-para {
+  line-height: 1.25rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* skills section */
+.about-me-image {
+  width: 200px;
+  border-radius: 50%;
+}
+.image-container {
+  display: flex;
+  align-items: center;
+}
+/* ============ Skills Section ================== */
+.accent-section {
+  background-color: #0c0e3f;
+  color: white;
+}
 .skill-container {
-  /* set width to 100% of screen size */
-  /* width: 100%; */
-  position: relative;
-  margin-top: 50px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .skill-card {
-  height: 150px;
   width: 150px;
-
-  border: 1px solid black;
-  /* below-code formats card-text */
-  text-align: center;
-  position: relative;
-  font-weight: bold;
-}
-.skill-large {
-  grid-column: span 2;
-}
-.skill {
-  font-size: 1.5rem;
-  color: #4051d0;
-  line-height: 150px;
-}
-.skill-card:hover {
-  background: rgba(0, 0, 0, 0.7);
-}
-
-/* project section */
-.project-container {
-  /* set width to 100% of screen size */
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
-  margin-top: 50px;
-}
-.project-card {
-  position: relative;
-  display: block;
+  height: 150px;
+  margin: 30px;
   cursor: pointer;
 }
-.project-card img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.project-large {
-  grid-column: span 2;
-  border: 1px solid black;
-}
-.project-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.4s;
-  text-transform: capitalize;
-  opacity: 0;
-}
-.project-title {
-  color: white;
-  font-weight: 300;
-  font-size: 2.5rem;
-  text-align: center;
-}
-.project-description {
-  position: absolute;
-  bottom: 20px;
-  opacity: 0.6;
-  width: 90%;
-}
-.project-content:hover {
-  opacity: 1;
+.skill-img {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
 }
 
-/* conact section */
+/* ============ Project Section ================== */
+.project-card {
+  width: 300px;
+  height: 500px;
+  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.3);
+  margin: 30px;
+  border-radius: 30px;
+}
+.project-card.large {
+  width: 600px;
+  height: 500px;
+  box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.3);
+  margin: 30px;
+}
+.project-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.project-information {
+  display: flex;
+  flex-direction: column;
+}
+.project-information a {
+  text-transform: uppercase;
+  padding: 0.5rem 1rem;
+  background-color: #eb59a7;
+  color: #fff;
+  border-radius: 30px;
+}
+.subtext {
+  margin: 20px;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+.project-image {
+  width: 300px;
+  border-radius: 30px;
+}
+.project-image-large {
+  border-radius: 30px;
+}
+hr {
+  margin: 0 50px;
+}
+.project-link {
+  text-decoration: none;
+  color: #0c0e3f;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+/* contact section */
 .contact-form {
   width: 100%;
   margin-top: 50px;
@@ -265,176 +248,11 @@ li {
   margin: 20px 0;
   text-transform: capitalize;
 
-  /* glass effect */
   background: linear-gradient(130deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
   backdrop-filter: blur(10px);
   border: 1px solid white;
   box-shadow: 1px 5px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .message {
-  height: 200px;
+  height: 300px;
 }
-
-/* footer */
-.footer {
-  width: 100vw;
-  padding: 30px;
-  background-color: lightblue;
-}
-.contact-information {
-  background: lightcoral;
-  height: 5rem;
-  width: 100%;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-}
-.social-icons a {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: plum;
-  margin: 0px 10px;
-  border-radius: 50%;
-}
-
-@media (max-width: 992px) {
-  body {
-    background: lightcyan;
-  }
-  .project-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 50px;
-    margin-top: 50px;
-  }
-}
-
-@media (max-width: 768px) {
-  body {
-    font-size: 0.875rem;
-    background: lightgreen;
-  }
-
-  /* hamburger menu */
-  /* hamburger menu created using the below tutorial as a reference: 
-https://www.youtube.com/watch?v=OFKBep95lb4 */
-  .hamburger-btn {
-    position: absolute;
-    right: 5vw;
-    cursor: pointer;
-    background: none;
-    border: none;
-    /* background: #ffffff; */
-    width: 30px;
-    height: 30px;
-    /* border-radius: 50%; */
-  }
-
-  .hamburger-btn .menu,
-  .hamburger-btn:after {
-    content: "";
-    display: block;
-    height: 3px;
-    background-color: black;
-    margin: 5px 0;
-    transition: 0.4s;
-  }
-
-  /* PROBLEM IN NAV VISBILITY REQUIRES RESOLVING - for time being I have switched opacity settings in nav container*/
-
-  /* 'active' hamburger menu styling */
-  /* 'transform' property below rotates 'active' hamburger class to 90 degrees creating a + icon */
-  .hamburger-btn.active .menu {
-    transform: rotate(90deg) translate(5px, 0px);
-    transition: 0.4s;
-    background-color: #000000;
-  }
-  .hamburger-btn.active::after {
-    transform: rotate(180deg) translate(0px, 3px);
-    transition: 0.4s;
-    background-color: #000000;
-  }
-
-  /* mobile navigation menu formatting */
-  .nav-container {
-    position: absolute;
-    /* top 55px as navbar is 55px */
-    top: 55px;
-    width: 100%;
-    flex-direction: column;
-    transition: 0.5s;
-    background: #fff;
-    display: block;
-  }
-  .nav-container.visible {
-    display: none;
-  }
-  .nav-link {
-    text-align: center;
-    display: block;
-    height: 60px;
-  }
-  /* hero-section */
-  .hero {
-    flex-direction: column;
-    height: fit-content;
-    padding-bottom: 50px;
-  }
-  .hero-image {
-    width: 150px;
-    margin: 50px;
-  }
-  .hero-container {
-    width: 70%;
-    min-width: 350px;
-    justify-content: center;
-    text-align: center;
-  }
-  .hero-heading {
-    font-size: 4.5rem;
-  }
-
-  /* about section */
-  .about-container {
-    grid-template-columns: 1fr;
-  }
-  .left {
-    margin: auto;
-    width: 50%;
-    min-width: 320px;
-  }
-
-  /* skills section */
-  .skill-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  /* projects section */
-
-  .project-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .archive-project-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* Small devices (landscape phones, 576px and up */
-@media (max-width: 576px) {
-  body {
-    font-size: 0.75rem;
-    background: lightcoral;
-  }
-  .project-container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
-} */
